make it compile and fix some TODOs'